shitton of stuff im not bothering to describe, how reads these anyways (right?)
