# SimpleSocialNetworkBack/Business/Models/Responses/SubscriptionModel.cs
@@ -1,0 +1,14 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Business.Models.Responses
+{
+    public class SubscriptionModel
+    {
+        [Required] public int Id { get; set; }
+
+        public string? SubscriberId { get; set; }
+        public string? TargetId { get; set; }
+
+        [Required] public bool IsActive { get; set; }
+    }
+}
